# PROMETHEUS-BRIDGE-LEARN

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTENT-POLICY.md  CONTRIBUTING.md  LICENSE  PERSONAS-BACKLOG.md  PERSONAS-CATALOGO.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: CONTENT-POLICY.md  GUIA-DE-USO.md  GUIA_DO_PROFESSOR.md  PERSONAS-BACKLOG.md  PERSONAS-CATALOGO.md  PIPELINE.md
interface/: .gitignore  .prettierignore  .prettierrc  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
interface/scripts/: sync-version.mjs
interface/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
interface/src-tauri/: Cargo.toml  tauri.conf.json
interface/src-tauri/icons/: icon.icns
interface/src-tauri/src/: ai.rs  export.rs  import.rs  lib.rs  main.rs  personas.rs  secure_store.rs
personas/: manifest.json
personas/custom/: template.json
personas/fictional/: aerith.json  ainz-ooal-gown.json  albedo.json  aquaman.json  ash-ketchum.json  bacon-hair.json  batman.json  bayonetta.json  big-boss.json  black-panther.json  black-widow.json  breno.json  captain-america.json  catwoman.json  chris-redfield.json  claire-redfield.json  cloud-strife.json  cyborg.json  daredevil.json  deadpool.json  deckard-cain.json  doctor-strange.json  ezio-auditore.json  gandalf.json  geralt.json  ghost-rider.json  gojo-satoru.json  goku.json  (+58 more)
web/: .env.example  eslint.config.js  index.html  package.json  playwright.config.ts  vercel.json  vite.config.ts  vitest.config.ts
(+91 files in other folders)
