[package]
name = "interface"
version = "0.1.0"
description = "PBL - PROMETHEUS BRIDGE LEARN Interface"
authors = ["PBL Team"]
edition = "2021"

[lib]
name = "interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
docx-rs = "0.4"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.6.0"
