[package]
name = "interface"
version = "0.2.0"
description = "PBL - PROMETHEUS BRIDGE LEARN Interface"
authors = ["PBL Team"]
edition = "2021"

[lib]
name = "interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
docx-rs = "0.4"
genpdf = "0.2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
log = "0.4"
pdf-extract = "0.10"
zip = "2"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
